# gateway-evidence-replay

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml
fixtures/composition-v0/: README.md
fixtures/composition-v0/path-verified-tool-not-verifiable/: expected.json  gateway-path.json  manifest-sha256.txt  manifest.json  tool-surface.json
fixtures/composition-v0/tool-unchanged-path-mismatch/: expected.json  gateway-path.json  manifest-sha256.txt  manifest.json  tool-surface.json
fixtures/gateway-path-v0/: clean-route.json  vectors.json
fixtures/gateway-path-v0/demo/: README.md  clean-route.json  expected.json  manifest-sha256.txt  manifest.json  partial-route-substitution.json  stale-attestation.json  unknown-source.json
src/: composition.rs  lib.rs  main.rs  pack.rs  replay.rs  schema.rs  tool_surface.rs
tests/: composition_pack.rs  demo_fixtures.rs  demo_tamper.rs  gateway_path_v0.rs  replay_pack.rs  tool_surface.rs
